feat(oh): Add env config in angular json schema

--- a/angular.json
+++ b/angular.json
@@ -46,6 +46,48 @@
               ],
               "outputHashing": "all"
             },
+            "staging": {
+              "budgets": [
+                {
+                  "type": "initial",
+                  "maximumWarning": "500kb",
+                  "maximumError": "1mb"
+                },
+                {
+                  "type": "anyComponentStyle",
+                  "maximumWarning": "2kb",
+                  "maximumError": "4kb"
+                }
+              ],
+              "fileReplacements": [
+                {
+                  "replace": "apps/optimal-human/src/environments/environment.ts",
+                  "with": "apps/optimal-human/src/environments/environment.stag.ts"
+                }
+              ],
+              "outputHashing": "all"
+            },
+            "qa": {
+              "budgets": [
+                {
+                  "type": "initial",
+                  "maximumWarning": "500kb",
+                  "maximumError": "1mb"
+                },
+                {
+                  "type": "anyComponentStyle",
+                  "maximumWarning": "2kb",
+                  "maximumError": "4kb"
+                }
+              ],
+              "fileReplacements": [
+                {
+                  "replace": "apps/optimal-human/src/environments/environment.ts",
+                  "with": "apps/optimal-human/src/environments/environment.qa.ts"
+                }
+              ],
+              "outputHashing": "all"
+            },
             "development": {
               "buildOptimizer": false,
               "optimization": false,
@@ -62,6 +104,12 @@
           "configurations": {
             "production": {
               "browserTarget": "optimal-human:build:production"
+            },
+            "staging": {
+              "browserTarget": "optimal-human:build:staging"
+            },
+            "qa": {
+              "browserTarget": "optimal-human:build:qa"
             },
             "development": {
               "browserTarget": "optimal-human:build:development"
@@ -109,6 +157,12 @@
           "configurations": {
             "production": {
               "devServerTarget": "optimal-human:serve:production"
+            },
+            "staging": {
+              "devServerTarget": "optimal-human:serve:staging"
+            },
+            "qa": {
+              "devServerTarget": "optimal-human:serve:qa"
             }
           }
         },
