--- a/nx.json
+++ b/nx.json
@@ -26,13 +26,5 @@
       }
     ]
   },
-  "projects": {
-    "optimal-human": {
-      "tags": []
-    },
-    "optimal-human-e2e": {
-      "tags": [],
-      "implicitDependencies": ["optimal-human"]
-    }
-  }
+  "projects": {}
 }
