feat(OH-26-core): Add initial layout wrapper, storage service and initial auth implementation

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -18,10 +18,16 @@
       "@hidden-innovation/settings/data-access": [
         "libs/settings/data-access/src/index.ts"
       ],
+      "@hidden-innovation/settings/feature": [
+        "libs/settings/feature/src/index.ts"
+      ],
       "@hidden-innovation/shared/app-config": [
         "libs/shared/app-config/src/index.ts"
       ],
-      "@hidden-innovation/shell/feature": ["libs/shell/feature/src/index.ts"]
+      "@hidden-innovation/shell/feature": ["libs/shell/feature/src/index.ts"],
+      "@hidden-innovation/shell/ui/layout": [
+        "libs/shell/ui/layout/src/index.ts"
+      ]
     }
   },
   "exclude": ["node_modules", "tmp"]
