--- a/package.json
+++ b/package.json
@@ -39,6 +39,11 @@
     "@angular/platform-browser": "^12.1.0",
     "@angular/platform-browser-dynamic": "^12.1.0",
     "@angular/router": "^12.1.0",
+    "@ngrx/component-store": "~12.2.0",
+    "@ngrx/effects": "~12.2.0",
+    "@ngrx/entity": "~12.2.0",
+    "@ngrx/router-store": "~12.2.0",
+    "@ngrx/store": "~12.2.0",
     "@ngx-pwa/local-storage": "^12.1.0",
     "@nrwl/angular": "12.6.5",
     "bootstrap": "^5.1.0",
@@ -54,6 +59,8 @@
     "@angular/cli": "~12.1.0",
     "@angular/compiler-cli": "^12.1.0",
     "@angular/language-service": "^12.1.0",
+    "@ngrx/schematics": "~12.2.0",
+    "@ngrx/store-devtools": "~12.2.0",
     "@nrwl/cli": "12.6.5",
     "@nrwl/cypress": "12.6.5",
     "@nrwl/eslint-plugin-nx": "12.6.5",
