--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@angular/platform-browser": "^12.1.0",
     "@angular/platform-browser-dynamic": "^12.1.0",
     "@angular/router": "^12.1.0",
+    "@ngneat/overview": "^2.0.4",
     "@ngrx/component-store": "~12.2.0",
     "@ngrx/effects": "~12.2.0",
     "@ngrx/entity": "~12.2.0",
@@ -59,6 +60,7 @@
     "@angular/cli": "~12.1.0",
     "@angular/compiler-cli": "^12.1.0",
     "@angular/language-service": "^12.1.0",
+    "@ngneat/hot-toast": "^3.4.1",
     "@ngrx/schematics": "~12.2.0",
     "@ngrx/store-devtools": "~12.2.0",
     "@nrwl/cli": "12.6.5",
