feat(OH-04-setup): Complete project dependencies, imp libraries creation, auth logic and core UI

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -16,9 +16,11 @@
     "baseUrl": ".",
     "paths": {
       "@hidden-innovation/auth": ["libs/auth/src/index.ts"],
+      "@hidden-innovation/dashboard": ["libs/dashboard/src/index.ts"],
       "@hidden-innovation/libs/ui/login/login": [
         "libs/libs/ui/login/login/src/index.ts"
-      ]
+      ],
+      "@hidden-innovation/login": ["libs/login/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
