feat(OH-28-login): Add env variables integration with injector and connected API for login

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -20,7 +20,10 @@
       "@hidden-innovation/libs/ui/login/login": [
         "libs/libs/ui/login/login/src/index.ts"
       ],
-      "@hidden-innovation/login": ["libs/login/src/index.ts"]
+      "@hidden-innovation/login": ["libs/login/src/index.ts"],
+      "@hidden-innovation/shared/app-config": [
+        "libs/shared/app-config/src/index.ts"
+      ]
     }
   },
   "exclude": ["node_modules", "tmp"]
