--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,16 +15,13 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
+      "@env/*": ["apps/optimal-human/src/environments/*"],
       "@hidden-innovation/auth": ["libs/auth/src/index.ts"],
       "@hidden-innovation/dashboard": ["libs/dashboard/src/index.ts"],
       "@hidden-innovation/libs/ui/login/login": [
         "libs/libs/ui/login/login/src/index.ts"
       ],
-      "@hidden-innovation/login": ["libs/login/src/index.ts"],
       "@hidden-innovation/material": ["libs/material/src/index.ts"],
-      "@hidden-innovation/shared/app-config": [
-        "libs/shared/app-config/src/index.ts"
-      ],
       "@hidden-innovation/shared/form-config": [
         "libs/shared/form-config/src/index.ts"
       ],
