--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,9 +15,10 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
-      "@env/*": ["apps/optimal-human/src/environments/*"],
+//      "@env/*": ["apps/optimal-human/src/environments/*"],
       "@hidden-innovation/auth": ["libs/auth/src/index.ts"],
       "@hidden-innovation/dashboard": ["libs/dashboard/src/index.ts"],
+      "@hidden-innovation/environment": ["libs/environment/src/index.ts"],
       "@hidden-innovation/libs/ui/login/login": [
         "libs/libs/ui/login/login/src/index.ts"
       ],
