--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -18,6 +18,9 @@
       "@hidden-innovation/auth": ["libs/auth/src/index.ts"],
       "@hidden-innovation/dashboard": ["libs/dashboard/src/index.ts"],
       "@hidden-innovation/environment": ["libs/environment/src/index.ts"],
+      "@hidden-innovation/forgot-password": [
+        "libs/forgot-password/src/index.ts"
+      ],
       "@hidden-innovation/libs/ui/login/login": [
         "libs/libs/ui/login/login/src/index.ts"
       ],
