feat(OH-34-forgot-password): Add forgot pass API integration and store setup. Add logout prompt. Fix error message handling. Add dialog component

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -33,6 +33,9 @@
       "@hidden-innovation/shared/store": ["libs/shared/store/src/index.ts"],
       "@hidden-innovation/shared/ui/auth-layout": [
         "libs/shared/ui/auth-layout/src/index.ts"
+      ],
+      "@hidden-innovation/shared/ui/prompt-dialog": [
+        "libs/shared/ui/prompt-dialog/src/index.ts"
       ]
     }
   },
