--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "bootstrap": "^4.5.3",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
+    "xng-breadcrumb": "^6.7.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
