--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -17,6 +17,9 @@
     "paths": {
       "@hidden-innovation/auth": ["libs/auth/src/index.ts"],
       "@hidden-innovation/dashboard": ["libs/dashboard/src/index.ts"],
+      "@hidden-innovation/edit-admin-profile": [
+        "libs/edit-admin-profile/src/index.ts"
+      ],
       "@hidden-innovation/environment": ["libs/environment/src/index.ts"],
       "@hidden-innovation/forgot-password": [
         "libs/forgot-password/src/index.ts"
