fix(disable-copy-paste): Add disable copy and paste feature on all password fields

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -39,7 +39,8 @@
       ],
       "@hidden-innovation/shared/ui/prompt-dialog": [
         "libs/shared/ui/prompt-dialog/src/index.ts"
-      ]
+      ],
+      "@hidden-innovation/shared/utils": ["libs/shared/utils/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
