--- a/package.json
+++ b/package.json
@@ -48,9 +48,9 @@
     "@ngrx/store": "~12.2.0",
     "@ngx-pwa/local-storage": "^12.1.0",
     "@nrwl/angular": "12.6.5",
+    "@rinminase/ng-charts": "^4.1.0",
     "@rxweb/reactive-form-validators": "^2.1.3",
     "bootstrap": "^4.5.3",
-    "chart.js": "^3.5.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "xng-breadcrumb": "^6.7.0",
