--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -40,6 +40,9 @@
       "@hidden-innovation/shared/ui/auth-layout": [
         "libs/shared/ui/auth-layout/src/index.ts"
       ],
+      "@hidden-innovation/shared/ui/dashboard-count-card": [
+        "libs/shared/ui/dashboard-count-card/src/index.ts"
+      ],
       "@hidden-innovation/shared/ui/prompt-dialog": [
         "libs/shared/ui/prompt-dialog/src/index.ts"
       ],
