--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -47,6 +47,9 @@
         "libs/shared/ui/prompt-dialog/src/index.ts"
       ],
       "@hidden-innovation/shared/utils": ["libs/shared/utils/src/index.ts"],
+      "@hidden-innovation/user/user-details": [
+        "libs/user/user-details/src/index.ts"
+      ],
       "@hidden-innovation/user/user-listing": [
         "libs/user/user-listing/src/index.ts"
       ]
