--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@rinminase/ng-charts": "^4.1.0",
     "@rxweb/reactive-form-validators": "^2.1.3",
     "bootstrap": "^4.5.3",
+    "chartjs-plugin-datalabels": "^2.0.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "xng-breadcrumb": "^6.7.0",
