--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "nx": "nx",
     "start": "ng serve",
     "build": "ng build",
+    "build:stag": "ng build --configuration=staging",
+    "build:prod": "ng build --configuration=production",
     "test": "ng test",
     "lint": "nx workspace-lint && ng lint",
     "e2e": "ng e2e",
