feat(OH-148-edit-user): Add edit user API integration, form validation and state building

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -52,6 +52,9 @@
       "@hidden-innovation/shared/ui/common-form-field": [
         "libs/shared/ui/common-form-field/src/index.ts"
       ],
+      "@hidden-innovation/shared/ui/common-form-select-field": [
+        "libs/shared/ui/common-form-select-field/src/index.ts"
+      ],
       "@hidden-innovation/shared/ui/dashboard-count-card": [
         "libs/shared/ui/dashboard-count-card/src/index.ts"
       ],
