--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@rxweb/reactive-form-validators": "^2.1.3",
     "bootstrap": "^4.5.3",
     "chartjs-plugin-datalabels": "^2.0.0",
+    "lodash-es": "^4.17.21",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "xng-breadcrumb": "^6.7.0",
@@ -80,6 +81,7 @@
     "@nrwl/tao": "12.6.5",
     "@nrwl/workspace": "12.6.5",
     "@types/jest": "26.0.24",
+    "@types/lodash-es": "^4.17.5",
     "@types/node": "14.14.33",
     "@typescript-eslint/eslint-plugin": "~4.28.3",
     "@typescript-eslint/parser": "~4.28.3",
