--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@angular/core": "^12.1.0",
     "@angular/forms": "^12.1.0",
     "@angular/material": "^12.2.0",
+    "@angular/material-luxon-adapter": "^12.2.9",
     "@angular/platform-browser": "^12.1.0",
     "@angular/platform-browser-dynamic": "^12.1.0",
     "@angular/router": "^12.1.0",
@@ -57,6 +58,7 @@
     "bootstrap": "^4.5.3",
     "chartjs-plugin-datalabels": "^2.0.0",
     "lodash-es": "^4.17.21",
+    "luxon": "^2.0.2",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "xng-breadcrumb": "^6.7.0",
@@ -82,6 +84,7 @@
     "@nrwl/workspace": "12.6.5",
     "@types/jest": "26.0.24",
     "@types/lodash-es": "^4.17.5",
+    "@types/luxon": "^2.0.4",
     "@types/node": "14.14.33",
     "@typescript-eslint/eslint-plugin": "~4.28.3",
     "@typescript-eslint/parser": "~4.28.3",
