chore(project): Fix build issue and update packages

--- a/apps/optimal-human/project.json
+++ b/apps/optimal-human/project.json
@@ -109,7 +109,8 @@
           "apps/optimal-human/src/**/*.ts",
           "apps/optimal-human/src/**/*.html"
         ]
-      }
+      },
+      "outputs": ["{options.outputFile}"]
     },
     "test": {
       "executor": "@nrwl/jest:jest",
