--- a/apps/optimal-human-e2e/project.json
+++ b/apps/optimal-human-e2e/project.json
@@ -26,7 +26,8 @@
       "executor": "@nrwl/linter:eslint",
       "options": {
         "lintFilePatterns": ["apps/optimal-human-e2e/**/*.{js,ts}"]
-      }
+      },
+      "outputs": ["{options.outputFile}"]
     }
   },
   "tags": [],
