--- a/libs/auth/project.json
+++ b/libs/auth/project.json
@@ -32,7 +32,8 @@
       "executor": "@nrwl/linter:eslint",
       "options": {
         "lintFilePatterns": ["libs/auth/src/**/*.ts", "libs/auth/src/**/*.html"]
-      }
+      },
+      "outputs": ["{options.outputFile}"]
     }
   },
   "tags": []
