--- a/libs/change-password/project.json
+++ b/libs/change-password/project.json
@@ -35,7 +35,8 @@
           "libs/change-password/src/**/*.ts",
           "libs/change-password/src/**/*.html"
         ]
-      }
+      },
+      "outputs": ["{options.outputFile}"]
     }
   },
   "tags": []
