--- a/libs/shared/ui/common-form-field/project.json
+++ b/libs/shared/ui/common-form-field/project.json
@@ -35,7 +35,8 @@
           "libs/shared/ui/common-form-field/src/**/*.ts",
           "libs/shared/ui/common-form-field/src/**/*.html"
         ]
-      }
+      },
+      "outputs": ["{options.outputFile}"]
     }
   },
   "tags": []
