--- a/package.json
+++ b/package.json
@@ -31,29 +31,29 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^12.1.0",
-    "@angular/cdk": "^12.2.0",
-    "@angular/common": "^12.1.0",
-    "@angular/compiler": "^12.1.0",
-    "@angular/core": "^12.1.0",
-    "@angular/forms": "^12.1.0",
-    "@angular/material": "^12.2.0",
+    "@angular/animations": "12.2.10",
+    "@angular/cdk": "12.2.9",
+    "@angular/common": "12.2.10",
+    "@angular/compiler": "12.2.10",
+    "@angular/core": "12.2.10",
+    "@angular/forms": "12.2.10",
+    "@angular/material": "12.2.9",
     "@angular/material-luxon-adapter": "^12.2.9",
-    "@angular/platform-browser": "^12.1.0",
-    "@angular/platform-browser-dynamic": "^12.1.0",
-    "@angular/router": "^12.1.0",
+    "@angular/platform-browser": "12.2.10",
+    "@angular/platform-browser-dynamic": "12.2.10",
+    "@angular/router": "12.2.10",
     "@ngneat/content-loader": "^6.1.0",
     "@ngneat/overview": "^2.0.4",
     "@ngneat/reactive-forms": "^1.7.5",
     "@ngneat/until-destroy": "^8.1.4",
-    "@ngrx/component-store": "~12.2.0",
-    "@ngrx/effects": "~12.2.0",
-    "@ngrx/entity": "~12.2.0",
-    "@ngrx/router-store": "~12.2.0",
-    "@ngrx/store": "~12.2.0",
+    "@ngrx/component-store": "12.4.0",
+    "@ngrx/effects": "12.4.0",
+    "@ngrx/entity": "12.4.0",
+    "@ngrx/router-store": "12.4.0",
+    "@ngrx/store": "12.4.0",
     "@ngx-pwa/local-storage": "^12.1.0",
-    "@nrwl/angular": "12.6.5",
-    "@rinminase/ng-charts": "^4.1.0",
+    "@nrwl/angular": "12.10.0",
+    "@rinminase/ng-charts": "^4.1.1",
     "@rxweb/reactive-form-validators": "^2.1.3",
     "bootstrap": "^4.5.3",
     "chartjs-plugin-datalabels": "^2.0.0",
@@ -65,40 +65,40 @@
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~12.1.0",
+    "@angular-devkit/build-angular": "12.2.10",
     "@angular-eslint/eslint-plugin": "~12.3.0",
     "@angular-eslint/eslint-plugin-template": "~12.3.0",
     "@angular-eslint/template-parser": "~12.3.0",
-    "@angular/cli": "~12.1.0",
-    "@angular/compiler-cli": "^12.1.0",
-    "@angular/language-service": "^12.1.0",
+    "@angular/cli": "12.2.10",
+    "@angular/compiler-cli": "12.2.10",
+    "@angular/language-service": "12.2.10",
     "@ngneat/hot-toast": "^3.4.1",
-    "@ngrx/schematics": "~12.2.0",
-    "@ngrx/store-devtools": "~12.2.0",
-    "@nrwl/cli": "12.6.5",
-    "@nrwl/cypress": "12.6.5",
-    "@nrwl/eslint-plugin-nx": "12.6.5",
-    "@nrwl/jest": "12.6.5",
-    "@nrwl/linter": "12.6.5",
-    "@nrwl/tao": "12.6.5",
-    "@nrwl/workspace": "12.6.5",
-    "@types/jest": "26.0.24",
+    "@ngrx/schematics": "12.4.0",
+    "@ngrx/store-devtools": "12.4.0",
+    "@nrwl/cli": "12.10.0",
+    "@nrwl/cypress": "12.10.0",
+    "@nrwl/eslint-plugin-nx": "12.10.0",
+    "@nrwl/jest": "12.10.0",
+    "@nrwl/linter": "12.10.0",
+    "@nrwl/tao": "12.10.0",
+    "@nrwl/workspace": "12.10.0",
+    "@types/jest": "27.0.2",
     "@types/lodash-es": "^4.17.5",
     "@types/luxon": "^2.0.4",
     "@types/node": "14.14.33",
-    "@typescript-eslint/eslint-plugin": "~4.28.3",
-    "@typescript-eslint/parser": "~4.28.3",
+    "@typescript-eslint/eslint-plugin": "4.31.2",
+    "@typescript-eslint/parser": "4.31.2",
     "cypress": "^7.3.0",
-    "dotenv": "~10.0.0",
+    "dotenv": "10.0.0",
     "eslint": "7.22.0",
     "eslint-config-prettier": "8.1.0",
     "eslint-plugin-cypress": "^2.10.3",
-    "jest": "27.0.3",
-    "jest-preset-angular": "9.0.4",
-    "ng-packagr": "^12.1.0",
+    "jest": "27.2.3",
+    "jest-preset-angular": "10.0.1",
+    "ng-packagr": "12.2.3",
     "prettier": "^2.3.1",
-    "ts-jest": "27.0.3",
+    "ts-jest": "27.0.5",
     "ts-node": "~9.1.1",
-    "typescript": "~4.3.5"
+    "typescript": "4.3.5"
   }
 }
