--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -83,6 +83,9 @@
         "libs/shared/ui/spinner-text/src/index.ts"
       ],
       "@hidden-innovation/shared/utils": ["libs/shared/utils/src/index.ts"],
+      "@hidden-innovation/user/data-access": [
+        "libs/user/data-access/src/index.ts"
+      ],
       "@hidden-innovation/user/user-details": [
         "libs/user/user-details/src/index.ts"
       ],
