--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -34,6 +34,9 @@
       "@hidden-innovation/questionnaire/create-questionnaire": [
         "libs/questionnaire/create-questionnaire/src/index.ts"
       ],
+      "@hidden-innovation/questionnaire/data-access": [
+        "libs/questionnaire/data-access/src/index.ts"
+      ],
       "@hidden-innovation/reset-password": ["libs/reset-password/src/index.ts"],
       "@hidden-innovation/shared/form-config": [
         "libs/shared/form-config/src/index.ts"
