--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -38,6 +38,9 @@
         "libs/questionnaire/data-access/src/index.ts"
       ],
       "@hidden-innovation/reset-password": ["libs/reset-password/src/index.ts"],
+      "@hidden-innovation/shared-ui/questionnaire-question": [
+        "libs/shared-ui/questionnaire-question/src/index.ts"
+      ],
       "@hidden-innovation/shared/form-config": [
         "libs/shared/form-config/src/index.ts"
       ],
