--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -99,6 +99,10 @@
         "libs/shared/ui/spinner-text/src/index.ts"
       ],
       "@hidden-innovation/shared/utils": ["libs/shared/utils/src/index.ts"],
+      "@hidden-innovation/tags/data-access": [
+        "libs/tags/data-access/src/index.ts"
+      ],
+      "@hidden-innovation/tags/tags": ["libs/tags/tags/src/index.ts"],
       "@hidden-innovation/user/data-access": [
         "libs/user/data-access/src/index.ts"
       ],
