feaT(OH-565-test): Add create test group and single routing and template handling

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -115,6 +115,9 @@
       "@hidden-innovation/test/data-access": [
         "libs/test/data-access/src/index.ts"
       ],
+      "@hidden-innovation/test/test-create": [
+        "libs/test/test-create/src/index.ts"
+      ],
       "@hidden-innovation/test/test-listing": [
         "libs/test/test-listing/src/index.ts"
       ],
