--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -118,6 +118,9 @@
         "libs/tags/data-access/src/index.ts"
       ],
       "@hidden-innovation/tags/tags": ["libs/tags/tags/src/index.ts"],
+      "@hidden-innovation/test-group/data-access": [
+        "libs/test-group/data-access/src/index.ts"
+      ],
       "@hidden-innovation/test-group/test-group-listing": [
         "libs/test-group/test-group-listing/src/index.ts"
       ],
