feat(OH-623-test-group/create): Add test selector UI and selection strategy with dialog UI

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -110,6 +110,9 @@
       "@hidden-innovation/shared/ui/tag-create": [
         "libs/shared/ui/tag-create/src/index.ts"
       ],
+      "@hidden-innovation/shared/ui/test-selector": [
+        "libs/shared/ui/test-selector/src/index.ts"
+      ],
       "@hidden-innovation/shared/ui/test-tab-group": [
         "libs/shared/ui/test-tab-group/src/index.ts"
       ],
