--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-material-components/datetime-picker": "^6.0.3",
     "@angular/animations": "12.2.10",
     "@angular/cdk": "12.2.9",
     "@angular/common": "12.2.10",
@@ -42,6 +43,7 @@
     "@angular/platform-browser": "12.2.10",
     "@angular/platform-browser-dynamic": "12.2.10",
     "@angular/router": "12.2.10",
+    "@ng-matero/extensions": "^12.7.0",
     "@ngneat/content-loader": "^6.1.0",
     "@ngneat/overview": "^2.0.4",
     "@ngneat/reactive-forms": "^1.7.5",
