feat(feature): feature listing table

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -24,6 +24,12 @@
         "libs/edit-admin-profile/src/index.ts"
       ],
       "@hidden-innovation/environment": ["libs/environment/src/index.ts"],
+      "@hidden-innovation/feature/data-access": [
+        "libs/feature/data-access/src/index.ts"
+      ],
+      "@hidden-innovation/feature/feature-listing": [
+        "libs/feature/feature-listing/src/index.ts"
+      ],
       "@hidden-innovation/forgot-password": [
         "libs/forgot-password/src/index.ts"
       ],
