feat(assessment-create): assessment create template ui

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,6 +15,9 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
+      "@hidden-innovation/assessment/assessment-create": [
+        "libs/assessment/assessment-create/src/index.ts"
+      ],
       "@hidden-innovation/assessment/assessment-listing": [
         "libs/assessment/assessment-listing/src/index.ts"
       ],
