fix(OH-827,829,830,831): Add prompt mesage for edit, publish, delete OPs in all module

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -134,6 +134,9 @@
       "@hidden-innovation/shared/ui/form-field-errors": [
         "libs/shared/ui/form-field-errors/src/index.ts"
       ],
+      "@hidden-innovation/shared/ui/info-dialog": [
+        "libs/shared/ui/info-dialog/src/index.ts"
+      ],
       "@hidden-innovation/shared/ui/lesson-create": [
         "libs/shared/ui/lesson-create/src/index.ts"
       ],
