--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -21,6 +21,9 @@
       "@hidden-innovation/assessment/assessment-listing": [
         "libs/assessment/assessment-listing/src/index.ts"
       ],
+      "@hidden-innovation/assessment/data-access": [
+        "libs/assessment/data-access/src/index.ts"
+      ],
       "@hidden-innovation/auth": ["libs/auth/src/index.ts"],
       "@hidden-innovation/change-password": [
         "libs/change-password/src/index.ts"
