--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -143,6 +143,9 @@
       "@hidden-innovation/shared/ui/line-chart": [
         "libs/shared/ui/line-chart/src/index.ts"
       ],
+      "@hidden-innovation/shared/ui/network-status-dialog": [
+        "libs/shared/ui/network-status-dialog/src/index.ts"
+      ],
       "@hidden-innovation/shared/ui/pack-content-card": [
         "libs/shared/ui/pack-content-card/src/index.ts"
       ],
