feat(sports-activities) - data access library setup

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -195,6 +195,9 @@
       "@hidden-innovation/sports-activities/create-sports-activities": [
         "libs/sports-activities/create-sports-activities/src/index.ts"
       ],
+      "@hidden-innovation/sports-activities/data-access": [
+        "libs/sports-activities/data-access/src/index.ts"
+      ],
       "@hidden-innovation/tags/data-access": [
         "libs/tags/data-access/src/index.ts"
       ],
